fixed the markup on mobile devices

--- a/src/assets/scss/cards/_index.scss
+++ b/src/assets/scss/cards/_index.scss
@@ -1,6 +1,8 @@
 @import 'connection-statistics';
 
 .dashboard-card {
+  margin: 15px;
+  max-width: calc(100% - 30px);
   @media (min-width: 600px) {
     width: 500px;
   }
